--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,7 @@ crash.log
 # .tfvars files are managed as part of configuration and so should be included in
 # version control.
 #
+.*.tfvars
 **/*.tfvars
 **/backend.tf
 
